<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    android:textDirection="rtl"
    android:layoutDirection="rtl"
    android:clickable="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="@color/colorWhiteDark"
        app:cardElevation="6dp"
        app:cardCornerRadius="5dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="30dp">

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/Loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="85dp"
                        android:layout_height="70dp"
                        android:src="@drawable/logo"
                        android:layout_gravity="center"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:hint="@string/UserName"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txt_UserName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/user_name"
                            android:drawablePadding="@dimen/PaddingTextInput"
                            android:fontFamily="@font/vazir"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="@string/Password"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txt_Password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/lock"
                            android:drawablePadding="@dimen/PaddingTextInput"
                            android:inputType="textPassword"
                            android:fontFamily="@font/vazir"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.cardview.widget.CardView
                    android:id="@+id/btn_Login"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    app:cardBackgroundColor="@color/colorAccent"
                    app:cardCornerRadius="20dp"
                    android:theme="@style/AppTheme.MyRipple"
                    android:clickable="true">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/Login"
                        android:gravity="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/TextSizeButton"
                        android:fontFamily="@font/vazir"
                        android:textStyle="bold"/>

                </androidx.cardview.widget.CardView>


            </LinearLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>